plugins {
	id "net.fabricmc.fabric-loom-remap" version "${loom_version}"
}

base {
	archivesName = "naturalmotionblur"
}

loom {
	accessWidenerPath = file("src/main/resources/naturalmotionblur.accesswidener")
}

String getVersion() {
	String version = "${project.mod_version}+mc${project.minecraft_version}"
	return version
}
version = getVersion()
group = project.maven_group

repositories {
	maven { url "https://maven.terraformersmc.com/"}
	maven { url "https://maven.isxander.dev/releases" }
	maven { url "https://api.modrinth.com/maven"}
	maven { url 'https://jitpack.io' }
	flatDir {
		dirs 'libs'
	}
}

dependencies {
	mappings loom.officialMojangMappings()
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}"

	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
	modImplementation "dev.isxander:yet-another-config-lib:${project.yacl_version}"
}

processResources {
	inputs.property "version", project.version

	filesMatching("fabric.mod.json") {
		expand "version": project.version
	}
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
	it.options.release = 21
}

java {
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${base.archivesName.get()}" }
	}
}